--- a/semiproject/src/main/semiproject/src/App.css
+++ b/semiproject/src/main/semiproject/src/App.css
@@ -2,37 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.img-style {
+  width: 500px; /* 원하는 너비 */
+  height: 500px; /* 원하는 높이 */
+  margin: 0; /* 이미지 간의 간격을 없애기 */
+  display: inline-block; /* 이미지를 같은 줄에 배치 */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style-type: none; /* Removes the bullets or dots */
+  padding: 0; /* Removes default padding */
+  margin: 0; /* Removes default margin */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+  margin-bottom: 10px; /* Optional: Adds space between list items */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
