--- a/popply/src/main/popply/src/pages/Main.css
+++ b/popply/src/main/popply/src/pages/Main.css
@@ -6,7 +6,9 @@
 
 /* 메인 이미지 */
     .main_image {
-        width: 80%;
+        width: 100%;
+        height: 1000px; /* 원하는 높이 */
+        object-fit: cover; /* 이미지 비율 유지하며 잘라냄 */
         margin: auto;
         display: block;
     }
@@ -87,3 +89,9 @@
     .list_detail {
         display: block;
     }
+
+/* 리스트 하위 키워드 버튼 */
+.list_button {
+    border: none; /* 테두리 제거 */
+    background-color: rgba(255, 230, 0, 0.171); /* 반투명 배경 */
+}
