--- a/popply/src/main/popply/src/pages/component/WYSIWYG.css
+++ b/popply/src/main/popply/src/pages/component/WYSIWYG.css
@@ -8,11 +8,12 @@
 
 .main-container {
 	font-family: 'Lato';
-	width: fit-content;
-	margin-left: auto;
-	margin-right: auto;
+	font-size: 20px;
 	min-width: 90%;
 	max-width: 90%;
+ 	width: 100%;
+  	justify-content: flex-start;
+  	margin-left: -68px;
 }
 
 .ck-content {
