--- a/popply/src/main/popply/src/index.css
+++ b/popply/src/main/popply/src/index.css
@@ -15,9 +15,8 @@
 body {
   font-family: 'Pretendard-Regular' sans-serif; /* 원하는 폰트 설정 */
   position: relative;
-  margin: 0 2%; /* 기본 여백 제거 (필요 시) */
+  margin: 0;
   padding: 0; /* 기본 패딩 제거 (필요 시) */
-  line-height: 1.5; /* 줄 높이 조정 (필요 시) */
 }
 
 /* code {
