--- a/popply/src/main/popply/src/pages/styles/HeaderStyle.css
+++ b/popply/src/main/popply/src/pages/styles/HeaderStyle.css
@@ -1,17 +1,18 @@
 /* 헤더 전체 */
-    .header-all {
-        width: 100%;
-        height: 120px;
-        position: sticky; /* 스크롤 시에도 고정되도록 설정 */
-        top: 0; /* 상단에 고정 */
-        left: 0; /* 좌측에 고정 */
-        background-color: white; /* 배경색 설정 (필요시) */
-        z-index: 1000; /* 다른 요소 위에 표시되도록 설정 */
-        font-family: 'Pretendard-Regular', sans-serif; /*기본 폰트 적용*/
-    }
+.header-all {
+	margin: 1% 1% 0;
+  height: 120px;
+  position: sticky; /* 스크롤 시에도 고정되도록 설정 */
+  top: 0; /* 상단에 고정 */
+  left: 0; /* 좌측에 고정 */
+  background-color: white; /* 배경색 설정 (필요시) */
+  z-index: 1000; /* 다른 요소 위에 표시되도록 설정 */
+  font-family: 'Pretendard-Regular', sans-serif; /*기본 폰트 적용*/
+}
 
 /* HeaderNavMenu 스타일 */
     .header-nav-menu {
+			width: auto;
         display: flex; /* Flexbox 사용 */
         align-items: center; /* 수직 중앙 정렬 */
         height: 100%; /* 부모 요소 높이 사용 */
