--- a/popply/src/main/popply/src/pages/styles/Main_list.css
+++ b/popply/src/main/popply/src/pages/styles/Main_list.css
@@ -1,8 +1,9 @@
 /* 전체 리스트 컨테이너 */
 .list_container {
     display: flex; /* Flexbox 사용 */
-    flex-direction: column; /* 세로 방향으로 정렬 */
+    flex-direction: column;
     align-items: center; /* 중앙 정렬 */
+    margin: 0 4% 4%;
 }
 
 /* 리스트 항목들을 감싸는 div */
@@ -10,19 +11,29 @@
     display: flex; /* Flexbox 사용 */
     flex-direction: row; /* 수평 방향으로 정렬 */
     gap: 20px; /* 항목 간의 간격 조정 */
+    align-items: center;
     justify-content: center; /* 중앙 정렬 */
-    flex-direction: column;
     font-family: 'Pretendard-Regular', sans-serif; /*기본 폰트 적용*/
+    overflow: hidden;
 }
 
 /* 리스트 메인 제목 */
 .list_main_name {
-    display: flex; /* Flexbox 사용 */
+    display: inline-block;
+    width: 100%;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 42px;
     text-align: left; /* 글씨를 왼쪽으로 정렬 */
-    margin-bottom: 0px; /* 제목과 리스트 항목 간의 간격 */
+    margin: 17px 0; /* 제목과 리스트 항목 간의 간격 */
     font-family: 'Pretendard-Regular', sans-serif; /*기본 폰트 적용*/
+}
+
+.list_btn {
+	/*max-width: 60px;
+	max-height: 277.5px;*/
+	max-width: 80px;
+	max-height: 370px;
+	cursor: pointer;
 }
 
 .list_content {
@@ -39,6 +50,7 @@
 
 .list_items_container {
     display: flex;
+    overflow: hidden;
     transition: transform 0.5s ease-in-out; /* 부드러운 슬라이드 애니메이션 */
     width: 100%;
 }
@@ -93,12 +105,4 @@
     padding: 10px 20px;
     cursor: pointer;
     
-}
-
-.list_carousel-button:first-child {
-    left: -60px; /* 왼쪽 정렬 */
-}
-
-.list_carousel-button:last-child {
-    right: -1300px; /* 오른쪽 정렬 */
 }
